Implementar cinta lateral y gestion de anuncios
